Add docs for 17.04 Edge release

--- a/_data/toc.yaml
+++ b/_data/toc.yaml
@@ -115,7 +115,7 @@ guides:
     - path: /toolbox/faqs/troubleshoot/
       title: Troubleshooting
   - path: /release-notes/
-    title: Docker Release Notes
+    title: Docker release notes
 - sectiontitle: Get Started
   section:
   - path: /learn/
