--- a/_data/toc.yaml
+++ b/_data/toc.yaml
@@ -919,72 +919,7 @@ manuals:
     title: Docker Cloud Settings and Docker ID
   - path: /docker-cloud/orgs/
     title: Organizations and Teams
-  - sectiontitle: Getting Started
-    section:
-    - path: /docker-cloud/getting-started/intro_cloud/
-      title: Introducing Docker Cloud
-    - path: /docker-cloud/getting-started/connect-infra/
-      title: Link to your Infrastructure
-    - path: /docker-cloud/getting-started/your_first_node/
-      title: Deploy your first node
-    - path: /docker-cloud/getting-started/your_first_service/
-      title: Deploy your first service
-    - sectiontitle: Deploy an application
-      section:
-      - path: /docker-cloud/getting-started/deploy-app/1_introduction/
-        title: Introduction to Deploying an app in Docker Cloud
-      - path: /docker-cloud/getting-started/deploy-app/2_set_up/
-        title: Set up your environment
-      - path: /docker-cloud/getting-started/deploy-app/3_prepare_the_app/
-        title: Prepare the application
-      - path: /docker-cloud/getting-started/deploy-app/4_push_to_cloud_registry/
-        title: Push the image to Docker Cloud's Registry
-      - path: /docker-cloud/getting-started/deploy-app/5_deploy_the_app_as_a_service/
-        title: Deploy the app as a Docker Cloud service
-      - path: /docker-cloud/getting-started/deploy-app/6_define_environment_variables/
-        title: Define environment variables
-      - path: /docker-cloud/getting-started/deploy-app/7_scale_the_service/
-        title: Scale the service
-      - path: /docker-cloud/getting-started/deploy-app/8_view_logs/
-        title: View service logs
-      - path: /docker-cloud/getting-started/deploy-app/9_load-balance_the_service/
-        title: Load-balance the service
-      - path: /docker-cloud/getting-started/deploy-app/10_provision_a_data_backend_for_your_service/
-        title: Provision a data backend for the service
-      - path: /docker-cloud/getting-started/deploy-app/11_service_stacks/
-        title: Stackfiles for your service
-      - path: /docker-cloud/getting-started/deploy-app/12_data_management_with_volumes/
-        title: Data management with Volumes
-  - sectiontitle: Manage Applications
-    section:
-    - path: /docker-cloud/apps/deploy-to-cloud-btn/
-      title: Add a Deploy to Docker Cloud button
-    - path: /docker-cloud/apps/auto-destroy/
-      title: Automatic container destroy
-    - path: /docker-cloud/apps/autorestart/
-      title: Automatic container restart
-    - path: /docker-cloud/apps/auto-redeploy/
-      title: Automatic service redeploy
-    - path: /docker-cloud/apps/load-balance-hello-world/
-      title: Create a proxy or load balancer
-    - path: /docker-cloud/apps/deploy-tags/
-      title: Deployment tags
-    - path: /docker-cloud/apps/stacks/
-      title: Manage service stacks
-    - path: /docker-cloud/apps/ports/
-      title: Publish and expose service or container ports
-    - path: /docker-cloud/apps/service-redeploy/
-      title: Redeploy running services
-    - path: /docker-cloud/apps/service-scaling/
-      title: Scale your service
-    - path: /docker-cloud/apps/api-roles/
-      title: Service API Roles
-    - path: /docker-cloud/apps/service-links/
-      title: Service discovery and links
-    - path: /docker-cloud/apps/triggers/
-      title: Use triggers
-    - path: /docker-cloud/apps/volumes/
-      title: Work with data volumes
+
   - sectiontitle: Manage Builds and Images
     section:
     - path: /docker-cloud/builds/
@@ -1003,7 +938,21 @@ manuals:
       title: Automated repository tests
     - path: /docker-cloud/builds/advanced/
       title: Advanced options for Autobuild and Autotest
-  - sectiontitle: Manage Infrastructure
+  - sectiontitle: Manage Swarms (Beta Swarm Mode)
+    section:
+    - path: /docker-cloud/cloud-swarm/
+      title: Overview
+    - path: /docker-cloud/cloud-swarm/using-swarm-mode/
+      title: Using Swarm Mode
+    - path: /docker-cloud/cloud-swarm/register-swarms/
+      title: Register existing swarms
+    - path: /docker-cloud/cloud-swarm/create-cloud-swarm/
+      title: Create a new swarm in Docker Cloud
+    - path: /docker-cloud/cloud-swarm/connect-to-swarm/
+      title: Connect to a swarm through Docker Cloud
+    - path: /docker-cloud/cloud-swarm/link-aws-swarm/
+      title: Link to Amazon Web Services to create Swarms
+  - sectiontitle: Manage Infrastructure (Standard Mode)
     section:
     - path: /docker-cloud/infrastructure/
       title: Infrastructure Overview
@@ -1029,17 +978,86 @@ manuals:
       title: Using Docker Cloud and Packet.net
     - path: /docker-cloud/infrastructure/cloud-on-aws-faq/
       title: Using Docker Cloud on AWS
-  - title: Cloud API reference
-    path: /apidocs/docker-cloud/
-  - title: Cloud stack file YAML reference
-    path: /docker-cloud/apps/stack-yaml-reference/
+  - sectiontitle: Manage Nodes and Apps (Standard Mode)
+    section:
+    - path: /docker-cloud/standard/
+      title: Overview
+    - sectiontitle: Getting Started
+      section:
+      - path: /docker-cloud/getting-started/
+        title: Getting started with Docker Cloud
+      - path: /docker-cloud/getting-started/intro_cloud/
+        title: Introducing Docker Cloud
+      - path: /docker-cloud/getting-started/connect-infra/
+        title: Link to your Infrastructure
+      - path: /docker-cloud/getting-started/your_first_node/
+        title: Deploy your first node
+      - path: /docker-cloud/getting-started/your_first_service/
+        title: Deploy your first service
+      - sectiontitle: Deploy an application
+        section:
+        - path: /docker-cloud/getting-started/deploy-app/1_introduction/
+          title: Introduction to Deploying an app in Docker Cloud
+        - path: /docker-cloud/getting-started/deploy-app/2_set_up/
+          title: Set up your environment
+        - path: /docker-cloud/getting-started/deploy-app/3_prepare_the_app/
+          title: Prepare the application
+        - path: /docker-cloud/getting-started/deploy-app/4_push_to_cloud_registry/
+          title: Push the image to Docker Cloud's Registry
+        - path: /docker-cloud/getting-started/deploy-app/5_deploy_the_app_as_a_service/
+          title: Deploy the app as a Docker Cloud service
+        - path: /docker-cloud/getting-started/deploy-app/6_define_environment_variables/
+          title: Define environment variables
+        - path: /docker-cloud/getting-started/deploy-app/7_scale_the_service/
+          title: Scale the service
+        - path: /docker-cloud/getting-started/deploy-app/8_view_logs/
+          title: View service logs
+        - path: /docker-cloud/getting-started/deploy-app/9_load-balance_the_service/
+          title: Load-balance the service
+        - path: /docker-cloud/getting-started/deploy-app/10_provision_a_data_backend_for_your_service/
+          title: Provision a data backend for the service
+        - path: /docker-cloud/getting-started/deploy-app/11_service_stacks/
+          title: Stackfiles for your service
+        - path: /docker-cloud/getting-started/deploy-app/12_data_management_with_volumes/
+          title: Data management with Volumes
+    - sectiontitle: Manage Applications
+      section:
+      - path: /docker-cloud/apps/
+        title: Applications in Docker Cloud
+      - path: /docker-cloud/apps/deploy-to-cloud-btn/
+        title: Add a Deploy to Docker Cloud button
+      - path: /docker-cloud/apps/auto-destroy/
+        title: Automatic container destroy
+      - path: /docker-cloud/apps/autorestart/
+        title: Automatic container restart
+      - path: /docker-cloud/apps/auto-redeploy/
+        title: Automatic service redeploy
+      - path: /docker-cloud/apps/load-balance-hello-world/
+        title: Create a proxy or load balancer
+      - path: /docker-cloud/apps/deploy-tags/
+        title: Deployment tags
+      - path: /docker-cloud/apps/stacks/
+        title: Manage service stacks
+      - path: /docker-cloud/apps/ports/
+        title: Publish and expose service or container ports
+      - path: /docker-cloud/apps/service-redeploy/
+        title: Redeploy running services
+      - path: /docker-cloud/apps/service-scaling/
+        title: Scale your service
+      - path: /docker-cloud/apps/api-roles/
+        title: Service API Roles
+      - path: /docker-cloud/apps/service-links/
+        title: Service discovery and links
+      - path: /docker-cloud/apps/triggers/
+        title: Use triggers
+      - path: /docker-cloud/apps/volumes/
+        title: Work with data volumes
+    - path: /docker-cloud/apps/stack-yaml-reference/
+      title: Cloud stack file YAML reference
   - path: /docker-cloud/slack-integration/
     title: Docker Cloud notifications in Slack
   - path: /apidocs/docker-cloud/
     title: Docker Cloud API
-    nosync: true
-  - path: /docker-cloud/apps/stack-yaml-reference/
-    title: Stack file YAML reference
     nosync: true
   - path: /docker-cloud/installing-cli/
     title: The Docker Cloud CLI
