added Aruba Cloud

--- a/_data/toc.yaml
+++ b/_data/toc.yaml
@@ -1933,6 +1933,8 @@ manuals:
       title: Driver options and operating system defaults
     - path: /machine/drivers/aws/
       title: Amazon Web Services
+    - path: /machine/drivers/aruba/
+      title: Aruba Cloud
     - path: /machine/drivers/digital-ocean/
       title: Digital Ocean
     - path: /machine/drivers/exoscale/
