Improve content trust docs in DDC

--- a/_data/toc.yaml
+++ b/_data/toc.yaml
@@ -1201,19 +1201,11 @@ manuals:
         - path: /datacenter/ucp/2.1/guides/admin/configure/restrict-services-to-worker-nodes/
           title: Restrict services to worker nodes
         - path: /datacenter/ucp/2.1/guides/admin/configure/use-domain-names-to-access-services/
+          title: Run only the images you trust
+        - path: /datacenter/ucp/2.1/guides/admin/configure/run-only-the-images-you-trust/
           title: Use domain names to access services
         - path: /datacenter/ucp/2.1/guides/admin/configure/external-auth/
           title: Integrate with LDAP
-        - sectiontitle: Content trust
-          section:
-          - path: /datacenter/ucp/2.1/guides/admin/configure/content-trust/
-            title: Only allow running signed images
-          - path: /datacenter/ucp/2.1/guides/admin/configure/content-trust/admin_tasks/
-            title: Configure the UCP and DTR servers for content trust
-          - path: /datacenter/ucp/2.1/guides/admin/configure/content-trust/client_configuration/
-            title: Configure the Docker client to sign images
-          - path: /datacenter/ucp/2.1/guides/admin/configure/use-trusted-images-for-ci/
-            title: Use trusted images for continuous integration
       - sectiontitle: Manage users
         section:
         - path: /datacenter/ucp/2.1/guides/admin/manage-users/
@@ -1386,6 +1378,8 @@ manuals:
         section:
         - path: /datacenter/dtr/2.2/guides/user/access-dtr/
           title: Configure your Docker Engine
+        - path: /datacenter/dtr/2.2/guides/user/access-dtr/configure-your-notary-client.md
+          title: Configure your Notary client
         - path: /datacenter/dtr/2.2/guides/user/access-dtr/use-a-cache/
           title: Use a cache
       - sectiontitle: Manage images
@@ -1398,8 +1392,14 @@ manuals:
           title: Delete images
         - path: /datacenter/dtr/2.2/guides/user/manage-images/scan-images-for-vulnerabilities/
           title: Scan images for vulnerabilities
-        - path: /datacenter/dtr/2.2/guides/user/manage-images/manage-trusted-repositories/
-          title: Manage trusted repositories
+        - sectiontitle: Sign images
+          section:
+          - path: /datacenter/dtr/2.2/guides/user/manage-images/sign-images/
+            title: Sign an image
+          - path: /datacenter/dtr/2.2/guides/user/manage-images/sign-images/delegate-image-signing/
+            title: Delegate image signing
+          - path: /datacenter/dtr/2.2/guides/user/manage-images/sign-images/manage-trusted-repositories/
+            title: Manage trusted repositories
       - path: /datacenter/dtr/2.2/guides/user/create-and-manage-webhooks/
         title: Create and manage webhooks
     - path: /datacenter/dtr/2.2/reference/api/
