--- a/_data/ddc_offline_files.yaml
+++ b/_data/ddc_offline_files.yaml
@@ -8,6 +8,8 @@
   tar-files:
     - description: "UCP 2.1.0"
       url: https://packages.docker.com/caas/ucp_images_2.1.0.tar.gz
+    - description: "DTR 2.2.3"
+      url: https://packages.docker.com/caas/dtr-2.2.3.tar.gz
     - description: "DTR 2.2.2"
       url: https://packages.docker.com/caas/dtr-2.2.2.tar.gz
     - description: "DTR 2.2.1"
