--- a/_data/ddc_offline_files.yaml
+++ b/_data/ddc_offline_files.yaml
@@ -6,6 +6,8 @@
 
 - ucp-version: "2.1"
   tar-files:
+    - description: "UCP 2.1.1"
+      url: https://packages.docker.com/caas/ucp_images_2.1.1.tar.gz
     - description: "UCP 2.1.0"
       url: https://packages.docker.com/caas/ucp_images_2.1.0.tar.gz
     - description: "DTR 2.2.3"
