engine-cli: update reference docs for 17.03
Signed-off-by: Tibor Vass <teabee89@gmail.com>

--- a/_data/engine-cli/docker_image_build.yaml
+++ b/_data/engine-cli/docker_image_build.yaml
@@ -71,8 +71,7 @@ options:
   default_value: '[]'
   description: Security options
 - option: shm-size
-  default_value: "0"
-  description: Size of /dev/shm
+  description: Size of /dev/shm, default value is 64MB
 - option: squash
   default_value: "false"
   description: Squash newly built layers into a single new layer
