--- a/_data/engine-cli/docker_network_inspect.yaml
+++ b/_data/engine-cli/docker_network_inspect.yaml
@@ -1,6 +1,8 @@
 command: docker network inspect
 short: Display detailed information on one or more networks
-long: Display detailed information on one or more networks
+long: |-
+  Returns information about one or more networks. By default, this command renders
+  all results in a JSON object.
 usage: docker network inspect [OPTIONS] NETWORK [NETWORK...]
 pname: docker network
 plink: docker_network.yaml
