--- a/_data/engine-cli/docker_volume_rm.yaml
+++ b/_data/engine-cli/docker_volume_rm.yaml
@@ -1,9 +1,7 @@
 command: docker volume rm
 aliases: remove
 short: Remove one or more volumes
-long: |2
-
-  Remove one or more volumes. You cannot remove a volume that is in use by a container.
+long: Remove one or more volumes. You cannot remove a volume that is in use by a container.
 usage: docker volume rm [OPTIONS] VOLUME [VOLUME...]
 pname: docker volume
 plink: docker_volume.yaml
@@ -12,8 +10,9 @@ options:
   shorthand: f
   default_value: "false"
   description: Force the removal of one or more volumes
-examples: |2
-
-  $ docker volume rm hello
-  hello
+examples: |-
+  ```bash
+    $ docker volume rm hello
+    hello
+  ```
 
