--- a/_data/engine-cli/docker_container_run.yaml
+++ b/_data/engine-cli/docker_container_run.yaml
@@ -69,9 +69,6 @@ options:
 - option: device
   default_value: '[]'
   description: Add a host device to the container
-- option: device-cgroup-rule
-  default_value: '[]'
-  description: Add a rule to the cgroup allowed devices list
 - option: device-read-bps
   default_value: '[]'
   description: Limit read rate (bytes per second) from a device
@@ -149,9 +146,9 @@ options:
   default_value: "0"
   description: Maximum IOps limit for the system drive (Windows only)
 - option: ip
-  description: IPv4 address (e.g., 172.30.100.104)
+  description: Container IPv4 address (e.g. 172.30.100.104)
 - option: ip6
-  description: IPv6 address (e.g., 2001:db8::33)
+  description: Container IPv6 address (e.g. 2001:db8::33)
 - option: ipc
   description: IPC namespace to use
 - option: isolation
@@ -177,7 +174,7 @@ options:
   default_value: '[]'
   description: Log driver options
 - option: mac-address
-  description: Container MAC address (e.g., 92:d0:c6:0a:29:33)
+  description: Container MAC address (e.g. 92:d0:c6:0a:29:33)
 - option: memory
   shorthand: m
   description: Memory limit
@@ -243,8 +240,7 @@ options:
   default_value: '[]'
   description: Security Options
 - option: shm-size
-  default_value: "0"
-  description: Size of /dev/shm
+  description: Size of /dev/shm, default value is 64MB
 - option: sig-proxy
   default_value: "true"
   description: Proxy received signals to the process
