--- a/_data/engine-cli/docker_create.yaml
+++ b/_data/engine-cli/docker_create.yaml
@@ -74,9 +74,6 @@ options:
 - option: device
   default_value: '[]'
   description: Add a host device to the container
-- option: device-cgroup-rule
-  default_value: '[]'
-  description: Add a rule to the cgroup allowed devices list
 - option: device-read-bps
   default_value: '[]'
   description: Limit read rate (bytes per second) from a device
@@ -154,9 +151,9 @@ options:
   default_value: "0"
   description: Maximum IOps limit for the system drive (Windows only)
 - option: ip
-  description: IPv4 address (e.g., 172.30.100.104)
+  description: Container IPv4 address (e.g. 172.30.100.104)
 - option: ip6
-  description: IPv6 address (e.g., 2001:db8::33)
+  description: Container IPv6 address (e.g. 2001:db8::33)
 - option: ipc
   description: IPC namespace to use
 - option: isolation
@@ -182,7 +179,7 @@ options:
   default_value: '[]'
   description: Log driver options
 - option: mac-address
-  description: Container MAC address (e.g., 92:d0:c6:0a:29:33)
+  description: Container MAC address (e.g. 92:d0:c6:0a:29:33)
 - option: memory
   shorthand: m
   description: Memory limit
@@ -248,8 +245,7 @@ options:
   default_value: '[]'
   description: Security Options
 - option: shm-size
-  default_value: "0"
-  description: Size of /dev/shm
+  description: Size of /dev/shm, default value is 64MB
 - option: stop-signal
   default_value: SIGTERM
   description: Signal to stop a container, SIGTERM by default
