--- a/_data/engine-cli/docker_image_push.yaml
+++ b/_data/engine-cli/docker_image_push.yaml
@@ -7,5 +7,5 @@ plink: docker_image.yaml
 options:
 - option: disable-content-trust
   default_value: "true"
-  description: Skip image signing
+  description: Skip image verification
 
