--- a/_data/engine-cli/docker_logs.yaml
+++ b/_data/engine-cli/docker_logs.yaml
@@ -48,8 +48,7 @@ options:
   default_value: "false"
   description: Follow log output
 - option: since
-  description: |
-    Show logs since timestamp (e.g. 2013-01-02T13:23:37) or relative (e.g. 42m for 42 minutes)
+  description: Show logs since timestamp
 - option: tail
   default_value: all
   description: Number of lines to show from the end of the logs
