--- a/_data/engine-cli/docker_network_disconnect.yaml
+++ b/_data/engine-cli/docker_network_disconnect.yaml
@@ -1,6 +1,8 @@
 command: docker network disconnect
 short: Disconnect a container from a network
-long: Disconnect a container from a network
+long: |2-
+   a container from a network. The container must be running to
+  disconnect it from the network.
 usage: docker network disconnect [OPTIONS] NETWORK CONTAINER
 pname: docker network
 plink: docker_network.yaml
@@ -9,4 +11,8 @@ options:
   shorthand: f
   default_value: "false"
   description: Force the container to disconnect from a network
+examples: |-
+  ```bash
+    $ docker network disconnect multi-host-network container1
+  ```
 
