--- a/_data/engine-cli/docker_plugin_rm.yaml
+++ b/_data/engine-cli/docker_plugin_rm.yaml
@@ -1,7 +1,11 @@
 command: docker plugin rm
 aliases: remove
 short: Remove one or more plugins
-long: Remove one or more plugins
+long: |-
+  Removes a plugin. You cannot remove a plugin if it is enabled, you must disable
+  a plugin using the [`docker plugin disable`](plugin_disable.md) before removing
+  it (or use --force, use of force is not recommended, since it can affect
+  functioning of running containers using the plugin).
 usage: docker plugin rm [OPTIONS] PLUGIN [PLUGIN...]
 pname: docker plugin
 plink: docker_plugin.yaml
@@ -10,4 +14,15 @@ options:
   shorthand: f
   default_value: "false"
   description: Force the removal of an active plugin
+examples: |-
+  The following example disables and removes the `sample-volume-plugin:latest`
+  plugin:
+
+  ```bash
+  $ docker plugin disable tiborvass/sample-volume-plugin
+  tiborvass/sample-volume-plugin
+
+  $ docker plugin rm tiborvass/sample-volume-plugin:latest
+  tiborvass/sample-volume-plugin
+  ```
 
