--- a/_data/engine-cli/docker_push.yaml
+++ b/_data/engine-cli/docker_push.yaml
@@ -24,7 +24,7 @@ plink: docker.yaml
 options:
 - option: disable-content-trust
   default_value: "true"
-  description: Skip image signing
+  description: Skip image verification
 examples: |-
   ### Push a new image to a registry
 
