--- a/_data/engine-cli/docker_secret_ls.yaml
+++ b/_data/engine-cli/docker_secret_ls.yaml
@@ -1,7 +1,7 @@
 command: docker secret ls
 aliases: list
 short: List secrets
-long: List secrets
+long: Run this command on a manager node to list the secrets in the swarm.
 usage: docker secret ls [OPTIONS]
 pname: docker secret
 plink: docker_secret.yaml
@@ -10,4 +10,11 @@ options:
   shorthand: q
   default_value: "false"
   description: Only display IDs
+examples: |-
+  ```bash
+  $ docker secret ls
+
+  ID                          NAME                    CREATED                                   UPDATED
+  mhv17xfe3gh6xc4rij5orpfds   secret.json             2016-10-27 23:25:43.909181089 +0000 UTC   2016-10-27 23:25:43.909181089 +0000 UTC
+  ```
 
