--- a/_data/engine-cli/docker_secret_rm.yaml
+++ b/_data/engine-cli/docker_secret_rm.yaml
@@ -1,8 +1,20 @@
 command: docker secret rm
 aliases: remove
 short: Remove one or more secrets
-long: Remove one or more secrets
+long: |-
+  Removes the specified secrets from the swarm. This command has to be run
+  targeting a manager node.
 usage: docker secret rm SECRET [SECRET...]
 pname: docker secret
 plink: docker_secret.yaml
+examples: |-
+  This example removes a secret:
+
+  ```bash
+  $ docker secret rm secret.json
+  sapth4csdo5b6wz2p5uimh5xg
+  ```
+
+  > **Warning**: Unlike `docker rm`, this command does not ask for confirmation
+  > before removing a secret.
 
