engine-cli: update reference docs for 1.13
Signed-off-by: Tibor Vass <teabee89@gmail.com>

--- a/_data/engine-cli/docker_network_connect.yaml
+++ b/_data/engine-cli/docker_network_connect.yaml
@@ -9,9 +9,9 @@ options:
   default_value: '[]'
   description: Add network-scoped alias for the container
 - option: ip
-  description: IPv4 address (e.g., 172.30.100.104)
+  description: IP Address
 - option: ip6
-  description: IPv6 address (e.g., 2001:db8::33)
+  description: IPv6 Address
 - option: link
   default_value: '[]'
   description: Add link to another container
