--- a/_data/engine-cli/docker_volume_inspect.yaml
+++ b/_data/engine-cli/docker_volume_inspect.yaml
@@ -1,6 +1,12 @@
 command: docker volume inspect
 short: Display detailed information on one or more volumes
-long: Display detailed information on one or more volumes
+long: |2+
+
+  Returns information about one or more volumes. By default, this command renders
+  all results in a JSON array. You can specify an alternate format to execute a
+  given template is executed for each result. Go's https://golang.org/pkg/text/template/
+  package describes all the details of the format.
+
 usage: docker volume inspect [OPTIONS] VOLUME [VOLUME...]
 pname: docker volume
 plink: docker_volume.yaml
