--- a/_data/engine-cli/docker_kill.yaml
+++ b/_data/engine-cli/docker_kill.yaml
@@ -1,12 +1,6 @@
 command: docker kill
 short: Kill one or more running containers
-long: |-
-  The main process inside the container will be sent `SIGKILL`, or any
-  signal specified with option `--signal`.
-
-  > **Note**: `ENTRYPOINT` and `CMD` in the *shell* form run as a subcommand of
-  > `/bin/sh -c`, which does not pass signals. This means that the executable is
-  > not the container’s PID 1 and does not receive Unix signals.
+long: Kill one or more running containers
 usage: docker kill [OPTIONS] CONTAINER [CONTAINER...]
 pname: docker
 plink: docker.yaml
