--- a/_data/engine-cli/docker_logout.yaml
+++ b/_data/engine-cli/docker_logout.yaml
@@ -1,11 +1,9 @@
 command: docker logout
 short: Log out from a Docker registry
-long: Log out from a Docker registry
+long: |-
+  Log out from a Docker registry.
+  If no server is specified, the default is defined by the daemon.
 usage: docker logout [SERVER]
 pname: docker
 plink: docker.yaml
-examples: |-
-  ```bash
-  $ docker logout localhost:8080
-  ```
 
