--- a/_data/engine-cli/docker_volume_ls.yaml
+++ b/_data/engine-cli/docker_volume_ls.yaml
@@ -1,7 +1,21 @@
 command: docker volume ls
 aliases: list
 short: List volumes
-long: List volumes
+long: |2+
+
+
+  Lists all the volumes Docker manages. You can filter using the **-f** or
+  **--filter** flag. The filtering format is a **key=value** pair. To specify
+  more than one filter,  pass multiple flags (for example,
+  **--filter "foo=bar" --filter "bif=baz"**)
+
+  The currently supported filters are:
+
+  * **dangling** (boolean - **true** or **false**, **1** or **0**)
+  * **driver** (a volume driver's name)
+  * **label** (**label=<key>** or **label=<key>=<value>**)
+  * **name** (a volume's name)
+
 usage: docker volume ls [OPTIONS]
 pname: docker volume
 plink: docker_volume.yaml
