Review HRM admin guide

--- a/_data/toc.yaml
+++ b/_data/toc.yaml
@@ -1264,8 +1264,8 @@ manuals:
         section:
         - path: /datacenter/ucp/2.1/guides/user/services/deploy-a-service/
           title: Deploy a service
-        - path: /datacenter/ucp/2.1/guides/user/services/use-hostnames-to-access-your-service/
-          title: Use hostnames to access your service
+        - path: /datacenter/ucp/2.1/guides/user/services/use-domain-names-to-access-services/
+          title: Use domain names to access services
         - path: /datacenter/ucp/2.1/guides/user/services/
           title: Deploy an app from the UI
         - path: /datacenter/ucp/2.1/guides/user/services/deploy-app-cli/
