UCP upgrade offline for 2.1
Adjust the upgrade section so it is no longer a subsection of install
Display the bundle link and it only shows UCP images

Signed-off-by: Ryan Zhang <ryan.zhang@docker.com>

--- a/_data/toc.yaml
+++ b/_data/toc.yaml
@@ -1172,6 +1172,8 @@ manuals:
           title: Install offline
         - path: /datacenter/ucp/2.1/guides/admin/upgrade/
           title: Upgrade
+        - path: /datacenter/ucp/2.1/guides/admin/upgrade-offline/
+          title: Upgrade offline
         - path: /datacenter/ucp/2.1/guides/admin/install/uninstall/
           title: Uninstall
       - sectiontitle: Configure
