--- a/_data/toc.yaml
+++ b/_data/toc.yaml
@@ -1336,8 +1336,6 @@ manuals:
             title: Chain multiple caches
         - path: /datacenter/dtr/2.2/guides/admin/configure/garbage-collection/
           title: Garbage collection
-        - path: /datacenter/dtr/2.2/guides/admin/configure/jobrunner/
-          title: Jobrunner
       - sectiontitle: Manage users
         section:
         - path: /datacenter/dtr/2.2/guides/admin/manage-users/
@@ -1354,6 +1352,8 @@ manuals:
           title: Monitor the cluster status
         - path: /datacenter/dtr/2.2/guides/admin/monitor-and-troubleshoot/troubleshoot-with-logs/
           title: Troubleshoot with logs
+        - path: /datacenter/dtr/2.2/guides/admin/monitor-and-troubleshoot/troubleshoot-batch-jobs/
+          title: Troubleshoot batch jobs
       - path: /datacenter/dtr/2.2/guides/admin/backups-and-disaster-recovery/
         title: Backups and disaster recovery
       - sectiontitle: CLI reference
