--- a/_data/toc.yaml
+++ b/_data/toc.yaml
@@ -2214,6 +2214,8 @@ glossary:
   title: filesystem
 - path: /glossary/#image
   title: image
+- path: /glossary/#kitematic
+  title: Kitematic
 - path: /glossary/#libcontainer
   title: libcontainer
 - path: /glossary/#libnetwork
