Added Template Archive pages for Docker for AWS and Azure
Signed-off-by: Ken Cochrane <KenCochrane@gmail.com>

--- a/_data/toc.yaml
+++ b/_data/toc.yaml
@@ -25,7 +25,7 @@ guides:
   - path: /docker-for-windows/install/
     title: Docker for Windows
   - path: /docker-ee-for-windows/install/
-    title: Docker EE for Windows Server   
+    title: Docker EE for Windows Server
   - sectiontitle: Docker for Linux
     section:
     - path: /engine/installation/linux/ubuntu/
@@ -70,6 +70,8 @@ guides:
       title: Open Source Licensing
     - path: /docker-for-aws/release-notes/
       title: Release Notes
+    - path: /docker-for-aws/archive/
+      title: Template Archive
   - sectiontitle: Docker for Azure
     section:
     - path: /docker-for-azure/why/
@@ -88,6 +90,8 @@ guides:
       title: Open Source Licensing
     - path: /docker-for-azure/release-notes/
       title: Release Notes
+    - path: /docker-for-azure/archive/
+      title: Template Archive
   - sectiontitle: Docker Toolbox (Legacy)
     section:
     - path: /toolbox/overview/
